# hotel_reservation_system

./: .envtemplate  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
clients/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_email.py
employees/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_employee_password.py  0003_remove_employee_employee_groups_and_more.py
hotel_reservation_system/: asgi.py  settings.py  urls.py  views.py  wsgi.py
reservations/: models.py  serializers.py  tests.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_options_alter_room_options_and_more.py
scripts/: create_superuser.sh
